<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.FragmentAddUpdateFee">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monthly_fee_payment"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1_month_fee"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_0_00"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            android:id="@+id/edtOneMonth"
            tools:ignore="Autofill"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_3_month_fee"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_0_00"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            android:id="@+id/edtThreeMonth"
            tools:ignore="Autofill"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_6_month_fee"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_0_00"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            android:id="@+id/edtSixMonth"
            tools:ignore="Autofill"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_9_month_fee"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_0_00"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            android:id="@+id/edtNineMonth"
            tools:ignore="Autofill"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_12_month_fee"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_0_00"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:inputType="numberDecimal"
            android:textSize="15sp"
            android:id="@+id/edtTwelveMonth"
            tools:ignore="Autofill"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/saves"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/purple_500"
            android:textColor="@color/white"
            android:layout_margin="15dp"
            android:id="@+id/btnMonthlyFee"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>